# simple_os

./: .gitignore  Cargo.toml  thumbv6m-none-eabi-simple_os.json
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
