[package]
name = "simple_os"
version = "0.1.0"
edition = "2024"

# profile used for cargo build
[profile.dev]
panic = "abort"         # disables stack unwinding

# profile used for cargo build --release
[profile.release]
panic = "abort"         # disables stack unwinding

[[bin]]
name = "simple_os"
test = false
bench = false

[dependencies]
