[package]
name = "simple_os"
version = "0.1.0"
edition = "2024"

# profile used for cargo build
[profile.dev]
panic = "abort"         # disables stack unwinding

# profile used for cargo build --release
[profile.release]
panic = "abort"         # disables stack unwinding

[[bin]]
name = "simple_os"
test = false
bench = false

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]